--- a/android/src/main/res/layout/item_country_list.xml
+++ b/android/src/main/res/layout/item_country_list.xml
@@ -3,26 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/list_item_margin"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/nameLabel"
+        style="@style/ListHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_map_24dp"
         android:text="@string/name"
-        android:textAllCaps="true"
         app:layout_constraintEnd_toStartOf="@+id/codeLabel"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.6" />
 
     <TextView
         android:id="@+id/codeLabel"
+        style="@style/ListHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_code_24dp"
         android:text="@string/code"
-        android:textAllCaps="true"
         app:layout_constraintEnd_toStartOf="@+id/domainLabel"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/nameLabel"
@@ -30,10 +34,11 @@
 
     <TextView
         android:id="@+id/domainLabel"
+        style="@style/ListHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_cloud_24dp"
         android:text="@string/domain"
-        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/codeLabel"
@@ -43,6 +48,10 @@
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="32dp"
+        android:padding="2dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/nameLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameLabel"
