--- a/android/src/main/res/layout/activity_list_countries.xml
+++ b/android/src/main/res/layout/activity_list_countries.xml
@@ -22,4 +22,34 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <FrameLayout
+        android:id="@+id/loadingView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
+        <ProgressBar
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/errorView"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableTop="@drawable/ic_error_32"
+            android:gravity="center"
+            android:text="@string/error_loading_countries"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp" />
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
