--- a/android/src/main/res/layout/activity_list_countries.xml
+++ b/android/src/main/res/layout/activity_list_countries.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/activity_margin"
-    tools:context=".ListCountriesActivity">
+    tools:context=".listcountries.ListCountriesActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshView"
